--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Welcome!</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, user-scalable=no" />
+  <link rel="manifest" href="manifest.json" />
+  <link rel="icon" type="image/x-icon" href="./img/favicon.ico">
   <link rel="stylesheet" href="./css/bootstrap.min.css">
   <script src="./js/bootstrap.bundle.min.js"></script>
   <script src="./js/fontawesome.js"></script>
